# home2

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  =2.12  AddCollisionObjects_8srv.html  ApproachPoint_8srv.html  AudioData_8msg.html  CONTRIBUTING_8md.html  CategorizeShelves_8srv.html  ChairsToRemove_8srv.html  CheckDoor_8srv.html  ClusterObjectFromPoint_8srv.html  CountByColor_8srv.html  CropQuery_8srv.html  CustomerTable_8msg.html  CustomerTables_8srv.html  Customer_8srv.html  DetectHand_8srv.html  Detection_8msg.html  DishwasherDetection_8srv.html  DockTable_8srv.html  DockToHandle_8srv.html  Doxyfile  EstimateFlatGrasp_8srv.html  FindClosest_8srv.html  FixedDistanceMove_8srv.html  FollowFace_8srv.html  GEMINI.md  GetOptimalPoseForPlane_8srv.html  GetRobotPose_8srv.html  GlobalPath_8msg.html  GoToHand_8action.html  GoToPose_8srv.html  GripperDetection_8msg.html  GripperGraspState_8msg.html  HeatmapPlace_8srv.html  IsCoherent_8srv.html  (+3081 more)
docker/edge-impulse-model/: CMakeLists.txt  README.txt
docker/edge-impulse-model/model-parameters/: model_metadata.h  model_variables.h
docker/edge-impulse-model/tflite-model/: tflite_learn_923961_4.h  tflite_learn_923961_4.tflite
frida_constants/: CMakeLists.txt  package.xml
frida_constants/data/: areas.json  context_areas.json  format.py  hand_items.json  items_context.json  names.json  names.md  objects.json  objects.md  positive.json
frida_constants/frida_constants/: __init__.py  hri_constants.py  integration_constants.py  manipulation_constants.py  navigation_constants.py  utils.py  vision_classes.py  vision_constants copy.py  vision_constants.py  vision_enums.py  xarm_configurations.py
frida_constants/include/frida_constants/: manip_3d.hpp  manipulation_constants_cpp.hpp  vision_constants_cpp.hpp
frida_constants/map_areas/: areas-jul11.json  areas-storing.json  areas-tmr-1.json  areas.json  areas2.json  areas_Afuera.json  areas_afueratmr.json  areas_backup.json  areas_fuera.json  areas_ll.json  areas_map.json  areas_respaldo.json  areas_temp_dis.json  areas_tmr2d.json  areasopl.json  areast_recep.json  areastest.json  context_areas.json
frida_interfaces/: CMakeLists.txt  package.xml
frida_interfaces/hri/action/: SpeechStream.action
frida_interfaces/hri/msg/: AudioDataStamped.msg  CommandList.msg  SoundEvent.msg
frida_interfaces/hri/srv/: AddEntry.srv  AddItem.srv  AddLocation.srv  AnswerQuestion.srv  BuildEmbeddings.srv  CategorizeShelves.srv  CommandInterpreter.srv  DetectEvent.srv  ExtractInfo.srv  FindClosest.srv  Grammar.srv  IsCoherent.srv  IsPositive.srv  ItemsCategory.srv  QueryEntry.srv  QueryItem.srv  QueryLocation.srv  RemoveItem.srv  STT.srv  Speak.srv  UpdateHotwords.srv  UpdateItem.srv
frida_interfaces/manipulation/action/: AlignArmToCentroid.action  GoToHand.action  ManipulationAction.action  ManipulationTask.action  MoveJoints.action  MoveToPoint.action  MoveToPose.action  OffsetMove.action  OpenContainer.action  PickAction.action  PickMotion.action  PickTask.action  PlaceMotion.action  PourMotion.action  XarmMove.action
frida_interfaces/manipulation/msg/: CollisionObject.msg  Constraint.msg  GripperDetection.msg  GripperGraspState.msg  ManipulationTask.msg  PickParams.msg  PickResult.msg  PlaceParams.msg  PlaceParamsSpecialRequest.md  PourParams.msg
frida_interfaces/manipulation/srv/: AddCollisionObject.srv  AddCollisionObjects.srv  AddPickPrimitives.srv  AttachCollisionObject.srv  ClusterObjectFromPoint.srv  DetectPlane.srv  EstimateFlatGrasp.srv  FixedDistanceMove.srv  GetCollisionObjects.srv  GetOptimalPoseForPlane.srv  GetOptimalPositionForPlane.srv  GetPlaneBbox.srv  GraspDetection.srv  HeatmapPlace.srv  PlayTrayectory.srv  ReadPcdFile.srv  RemovePlane.srv  RemoveVerticalPlane.srv  Test.srv
frida_interfaces/navigation/action/: Approach.action  Move.action
frida_interfaces/navigation/msg/: MonitorReport.msg  NodeStatus.msg
frida_interfaces/navigation/srv/: AlignToWall.srv  ApproachDirection.srv  ApproachPoint.srv  CloseToWall.srv  DockTable.srv  GetRobotPose.srv  GoToPose.srv  MapAreas.srv  MoveDistance.srv  MoveLocation.srv  MoveLocationIgnoreObstacles.srv  MoveRelative.srv  MoveUntilObject.srv  NavQuery.srv  RelativeMove.srv
frida_interfaces/srv/: FindSeat.srv
frida_interfaces/task_manager/srv/: CheckDoor.srv  PositionGet.srv  ReturnAreas.srv  WaitForControllerInput.srv
frida_interfaces/vision/action/: DetectPerson.action
frida_interfaces/vision/msg/: CustomerTable.msg  Detection.msg  ObjectDetection.msg  Person.msg  PersonList.msg
frida_interfaces/vision/srv/: BeverageLocation.srv  ChairsToRemove.srv  CountBy.srv  CountByColor.srv  CountByGesture.srv  Query.srv  (+33 more)
hri/proto_interfaces/: README.md  pyproject.toml  setup.py
robot_description/frida_description/: CMakeLists.txt  README.md  package.xml
robot_description/home_custom_base_simulation/: CMakeLists.txt  package.xml
task_manager/: CMakeLists.txt  package.xml  ruff.toml
task_manager/config/: subtasks_catalog.json
task_manager/launch/: carry_my_papu.launch.py  demo_face.launch.py  demo_hri_vision_manip_launch.py  doing_laundry.launch.py
task_manager/requirements/: requirements.txt
task_manager/scripts/: .restaurant_task_manager.py.swp  clean_table_task_manager.py  demo_manager.py  demo_task_manager.py  doing_laundry_task_manager.py  egpsr_task_manager.py  exploration_planner.py  finals_task_manager.py  follow_face_node.py  follow_face_task_manager.py  follow_person_node.py  follow_person_v2.py  gpsr_task_manager.py  hand_task_manager.py  help_me_carry.py  help_me_carry_task_manager.py  hric_task_manager.py  laundry_task_manager.py  nav_test.py  pickandplace_task_manager.py  point_transformer.py  receptionist_task_manager.py  restaurant_task_manager.py  run_while_hearing.py  safety_task_manager.py  storing_groceries.py  storing_groceries_manager.py  test_hri_manager.py  test_manager.py  test_manipulation_manager.py  test_vision_manager.py
vision/moondream_run/: CMakeLists.txt  package.xml
vision/vision_general/: .gitignore  CMakeLists.txt  package.xml  requirements.txt
(+6799 files in other folders)
