<package format="3">
  <name>frida_interfaces</name>
  <version>0.1.0</version>
  <description>Package containing shared message and service definitions.</description>

  <maintainer email="Roborregos@roborregos.com">Roborregos</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
