[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "proto_interfaces"
version = "0.1.0"
description = "Protocol Buffer interfaces for HRI microservices"
authors = [
    {name = "RoBorregos", email = "roborregosteam@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "grpcio>=1.70.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/RoBorregos/home2"

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_interfaces*"]
