<?xml version="1.0"?>
<package format="3">
  <name>home_custom_base_simulation</name>
  <version>0.0.0</version>
  <description>Minimal simulation support package for home_custom_base_description.</description>
  <maintainer email="roborregos@gmail.com">roborregos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
